# question-answer

./: .dockerignore  .env.example  Dockerfile  README.md  compose.yml  fixtures.json  pyproject.toml
config/: settings.py  urls.py
qa/: admin.py  models.py  serializers.py  urls.py  views.py
qa/migrations/: 0001_initial.py  0002_alter_answer_user.py  0003_alter_answer_user.py
qa/tests/: test_views.py
